--- a/public/index.html
+++ b/public/index.html
@@ -6,19 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>Conduit</title>
+  <title>TheMovieDB API Demo | Andreas Kramer, ankr.se</title>
   <!-- Import Ionicon icons & Google Fonts our Bootstrap theme relies on -->
   <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
   <link href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"
     rel="stylesheet" type="text/css">
   <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
   <link rel="stylesheet" href="https://demo.productionready.io/main.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 </head>
 
 <body>
   <noscript>
-    <strong>We're sorry but vue-realworld-example-app doesn't work properly without JavaScript enabled. Please enable
-      it to continue.</strong>
+    <strong>We're sorry but thetvdb-vuejs-app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
